added basic scss structure

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -1,3 +1,9 @@
 @use "base" as b;
 
 /* This file contains reusables such as buttons, navbars, cards etc. */
+
+/* Navigation */
+
+.nav {
+  background-color: burlywood;
+}
